# openchain-monorepo

./: BUILD.bazel  MODULE.bazel  WORKSPACE  repositories.bzl
cmd/solidity-compiler-srv/: BUILD.bazel  main.go
cmd/tx-tracer-srv/: BUILD.bazel  main.go
docs/: POSTGRESQL_SETUP.md
frontend/: API_MIGRATION_SUMMARY.md  pnpm-lock.yaml  test-api.html  test-api.js
frontend/components/tools/abi/: DecodeTab.tsx
frontend/components/tracer/: Chains.ts  ParamFlatView.tsx  api.tsx
frontend/components/tracer/decoder-format/: DecodeTree.tsx
frontend/components/tracer/trace/: CallTraceTreeItem.tsx  LogTraceTreeItem.tsx  TraceTreeItem.tsx
frontend/components/tracer/value-change/: ValueChange.tsx
frontend/pages/: test-api.js
frontend/pages/trace/[chain]/: [txhash].tsx
services/solidity-compiler-srv/: BUILD.bazel  service.go
services/tx-tracer-srv/: BUILD.bazel  service.go
services/tx-tracer-srv/client/: BUILD.bazel  types.go
services/vyper-compiler-srv/: http.go
services/vyper-compiler-srv/client/: types.go
