load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tx-tracer-srv_lib",
    srcs = ["main.go"],
    importpath = "github.com/openchainxyz/openchainxyz-monorepo/cmd/tx-tracer-srv",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//services/tx-tracer-srv",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "tx-tracer-srv",
    embed = [":tx-tracer-srv_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
) 